updated some spacing issues with get started

--- a/mlsite/assets/css/vitality-turquoise.css
+++ b/mlsite/assets/css/vitality-turquoise.css
@@ -18,7 +18,7 @@ body {
 }
 
 section {
-    padding: 100px 0;
+    padding: 150px 0;
 }
 
 section.bg-gray {
